hphp/hack/test/extended_reasons/fn_ret.php.exp
error: Typing[4110] Invalid return type

Expected `bool`

 7 | function bar(): »bool« {
 8 |   return foo();
 9 | }

File "fn_ret.php", line 7, character 17 - line 7, character 20:

But got `int`

 3 | function foo(): »int« {
 4 |   return 1;
 5 | }

File "fn_ret.php", line 3, character 17 - line 3, character 19:

Here's why: this hint

 3 | function foo(): »int« {
 4 |   return 1;
 5 | }

File "fn_ret.php", line 3, character 17 - line 3, character 19:

flows *into* this hint

 7 | function bar(): »bool« {
 8 |   return foo();
 9 | }

File "fn_ret.php", line 7, character 17 - line 7, character 20:

error: Typing[4110] Invalid return type

Expected `bool`

 7 | function bar(): »bool« {
 8 |   return foo();
 9 | }

File "fn_ret.php", line 7, character 17 - line 7, character 20:

But got `int`

 3 | function foo(): »int« {
 4 |   return 1;
 5 | }

File "fn_ret.php", line 3, character 17 - line 3, character 19:

Here's why: this hint

 3 | function foo(): »int« {
 4 |   return 1;
 5 | }

File "fn_ret.php", line 3, character 17 - line 3, character 19:

flows *into* this expression

 7 | function bar(): bool {
 8 |   return »foo()«;
 9 | }

File "fn_ret.php", line 8, character 10 - line 8, character 14:

which itself flows *into* this expression

 7 | function bar(): bool {
 8 |   »return foo();«
 9 | }

File "fn_ret.php", line 8, character 3 - line 8, character 15:

which itself flows *into* this hint

 7 | function bar(): »bool« {
 8 |   return foo();
 9 | }

File "fn_ret.php", line 7, character 17 - line 7, character 20:

2 errors found.
