hphp/hack/test/extended_reasons/fn_ret.php
<?hh

function foo(): int {
  return 1;
}

function bar(): bool {
  return foo();
}
